# SmartHome-TauronEMeter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  data_download.py  data_upload.py  download_data.py  main.py  pyproject.toml  requirements.txt
src/: Checkpoint.py  Config.py  Logging.py  TauronDataConverter.py  TauronEMeter.py
src/streams/: DataCollector.py  Disk.py  InfluxDataCollector.py
src/tauron/: TauronEMeter.py
